# dataquest-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  UV_MIGRATION_GUIDE.md  docker-compose.yml
backend/: .github-issues-to-create.md  .uvignore  API_RESPONSE_TIMES.md  DATASET_SIZE_LIMITS.md  Dockerfile  IMPROVEMENTS.md  LANGGRAPH_DOCS_INDEX.md  PHASE_1_COMPLETE.md  dataset_size_test_results.json  main.py  measure_api_response_times.py  pyproject.toml  requirements.txt  run.py  setup_tests.py  test_advanced_agents.py  test_anthropic.py  test_csv_delimiter_fix.py  test_dataset_sizes.py  test_uv_migration.py
backend/app/agents/: __init__.py  checkpoint_manager.py  critic_agent.py  enhanced_state.py  simple_workflow.py  statistical_agent.py  tool_agent.py  tools.py  workflow.py
backend/app/core/: config.py  database.py  feature_flags.py  metrics.py
backend/app/models/: database.py  databse.py  schemas.py
backend/app/services/: analysis_service.py  (+1 more)
backend/metrics/: error_test_456_2025-10-12T00-27-01.056410.json  error_test_456_2025-10-12T00-28-20.583094.json  integration_test_123_2025-10-12T00-27-01.055730.json  integration_test_123_2025-10-12T00-28-20.582380.json  test_456_2025-10-12T00-27-01.025765.json  test_456_2025-10-12T00-28-20.578594.json  test_quality_2025-10-12T00-28-20.581426.json  test_tool_tracking_2025-10-12T00-28-20.580966.json
backend/test_data/: employee_data.csv  inventory.csv  sales_sample.csv
backend/tests/: __init__.py  test_api_response_times.py  test_basic_api.py  test_integration.py  test_query_performance.py
backend/uploads/: 0291f204-a572-4109-bc5d-1d0b269096dc.csv  50abe50e-7e2a-4f77-8145-90edfcaa5390.csv  697004ef-2775-49c5-a4e5-cfd69c742440.csv  c2d1d4af-cef6-43f5-b66e-5072f0a4246f.csv
(+64 files in other folders)
